--- a/assets/scss/layout/_financial-compliance.scss
+++ b/assets/scss/layout/_financial-compliance.scss
@@ -18,8 +18,8 @@
         content: '';
         position: absolute;
         bottom: 0;
-        left: calc(50% - 960px);
-        width: 1920px;
+        left: 0;
+        width: 100%;
         height: 1px;
         background-color: $color-white;
         z-index: 5;
@@ -33,6 +33,7 @@
     padding-left: 40px;
     height: 100%;
     display: flex;
+    overflow: hidden;
 }
 
 // LEFT COLUMN - Smaller, with title  
@@ -46,14 +47,14 @@
     &::before {
         content: '';
         position: absolute;
-        top: -59px;
-        left: calc(50% - 600px + -340px);
-        width: 700px;
-        height: auto;
-        background-image: url('../images/ellipse.svg');
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url('assets/images/tild6162-6461-4233-b730-396261356134__ellipse_13_1.png');
         background-repeat: no-repeat;
         background-position: center center;
-        background-size: contain;
+        background-size: cover;
         opacity: 0.75;
         z-index: 1;
     }
@@ -66,10 +67,10 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: url('../images/union.svg');
+        background-image: url('assets/images/tild6535-3966-4638-a265-393438636538__union.svg');
         background-repeat: no-repeat;
-        background-position: right center;
-        background-size: contain;
+        background-position: left center;
+        background-size: cover;
         z-index: 2;
     }
     
@@ -82,7 +83,7 @@
     margin: 0;
     width: 245px;
     position: relative;
-    z-index: 1;
+    z-index: 3;
     
     @include respond-to(sm) {
       font-size: 28px;
@@ -94,7 +95,7 @@
 .compliance-right-content {
     position: relative;
     width: 64%;
-    padding: 40px 48px 40px 30px;
+    padding: 30px 48px 40px 30px;
     z-index: 3;
     display: flex;
     align-items: flex-end;
@@ -116,10 +117,12 @@
     flex: 1;
     max-width: none;
     margin-right: 20px;
+    margin-bottom: 10px;
 }
 
 .request-demo-button {
     flex-shrink: 0;
+    align-self: center;
 }
 
 .compliance-description {
